--- a/.bump.cfg
+++ b/.bump.cfg
@@ -6,10 +6,11 @@ date = [
     'rkm_codes/rkm_codes.py      __released__',
     'rkm_codes/__init__.py   __released__',
     'README.rst          Released',
+    'releases.rst          Released',
 ]
 version = [
     'setup.py            version',
     'rkm_codes/rkm_codes.py      __version__',
     'rkm_codes/__init__.py   __version__',
-    'README.rst          Version',
+    'releases.rst          Version',
 ]
