Fix version number in Readme.

--- a/.bump.cfg
+++ b/.bump.cfg
@@ -13,4 +13,5 @@ version = [
     'rkm_codes/rkm_codes.py      __version__',
     'rkm_codes/__init__.py   __version__',
     'releases.rst          Version',
+    'README.rst          Version',
 ]
