--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 matrix:
   include:
-    - python: 2.7
+      #- python: 2.7
     - python: 3.4
     - python: 3.5
     - python: 3.6
