--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
-    - python: 3.8-dev
+    - python: 3.8
       dist: xenial
       sudo: true
     - python: nightly
