--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.6", "3.x"]
       max-parallel: 6
 
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: Install Borg
         run: sudo apt install borgbackup
       - name: Install packages
-        run:
+        run: |
           python -m pip install --upgrade pip
           pip install .
           pip install tox
