--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,11 @@ envlist = lint, pytest, mypy
 isolated_build = True
 
 [testenv:lint]
-deps = pylama
+deps =
+    setuptools
+    ruff
 skip_install = true
-commands = pylama --ignore C901,E116,E251,E203,E501,E741,E731 rkm_codes/*.py
+commands = ruff check
 
 # Test environment
 [testenv]
